Fix scrollbar

--- a/src/routes/authen/builder/slide-builder/slide-entities/slide-entities.scss
+++ b/src/routes/authen/builder/slide-builder/slide-entities/slide-entities.scss
@@ -4,7 +4,7 @@ $slide-height: 120px;
   padding-top: 32px;
   padding-left: 28px;
   padding-right: 20px;
-  min-height: 100%;
+  height: calc(100vh - #{$header-height}) !important;
   width: 300px;
   background-color: white;
   overflow-y: auto;
